2023-10-05T01:16:38Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6413423719 # 835
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-05
* notice: last 14d: unq all: 3 37
* notice: prev accum: outdated-unq outdated-all / unq all: 245 513 / 261 550
* notice: next accum: outdated-unq outdated-all / unq all: 245 513 / 261 551
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +3 -0 -0 / 1 3
* notice: removed / changed dates: [] / [2023-09-21 2023-10-04]

2023-10-04T16:23:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6408785100 # 834
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
* notice: last 14d: unq all: 3 37
* notice: prev accum: outdated-unq outdated-all / unq all: 245 513 / 261 549
* notice: next accum: outdated-unq outdated-all / unq all: 245 513 / 261 550
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-04]

2023-10-04T08:22:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6403426641 # 833
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-04
* notice: last 14d: unq all: 3 36
* notice: prev accum: outdated-unq outdated-all / unq all: 245 513 / 260 548
* notice: next accum: outdated-unq outdated-all / unq all: 245 513 / 261 549
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-04]

2023-10-03T16:23:58Z: