@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-05T01:16:38Z",
+  "timestamp" : "2023-10-05T08:23:09Z",
   "count_outdated" : 513,
   "uniques_outdated" : 245,
-  "count" : 551,
-  "uniques" : 261,
+  "count" : 552,
+  "uniques" : 262,
   "clones" : [
     {
       "timestamp": "2023-09-21T00:00:00Z",
@@ -127,6 +127,15 @@
       "count": 3,
       "count_minmax": [ 1, 3 ],
       "count_decinc": [ 0, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
