@@ -1,3 +1,12 @@
+2023-10-05T08:23:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6416504615 # 836
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-05
+* notice: last 14d: unq all: 3 38
+* notice: prev accum: outdated-unq outdated-all / unq all: 245 513 / 261 551
+* notice: next accum: outdated-unq outdated-all / unq all: 245 513 / 262 552
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-05]
+
 2023-10-05T01:16:38Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6413423719 # 835
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-05
